# oviedolab-website-source

./: CNAME  README.md  bun.lockb  package.json  svelte-sitemap.config.ts  svelte.config.js  vite.config.ts
src/: app.css  app.html
src/content/events/20241119_WashU-AuRA/: caption.txt
src/content/events/20250831_PoolParty/: caption.txt
src/content/events/20250905_Cardinals/: caption.txt
src/content/publications/: publications.json
src/content/publications/AshlanReid2025/: AshlanReid2025.svx
src/content/publications/DemetriosNeophytou2020/: DemetriosNeophytou2020.svx
src/content/publications/DemetriosNeophytou2022/: DemetriosNeophytou2022.svx
src/content/publications/ForouzanFarahani2021/: ForouzanFarahani2021.svx
src/content/publications/HassanaOyibo2014/: HassanaOyibo2014.svx
src/content/publications/HysellOviedo2010/: HysellOviedo2010.svx
src/content/publications/HysellOviedo2012/: HysellOviedo2012.svx
src/content/team/: team.json
src/lib-wasm/: Cargo.toml
src/lib/components/: konami.ts
src/lib/utils/: color.ts  date.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  stores.ts
src/routes/events/: +page.server.ts  +page.svelte
src/routes/openings/: +page.svelte
src/routes/openings-page.html/: +page.server.ts
src/routes/publications/: +page.server.ts  +page.svelte
src/routes/research/: +page.server.ts  +page.svelte
src/routes/team/: +page.server.ts  +page.svelte
src/routes/tech-n-tools/: +layout.server.ts  +page.svelte
src/service-worker/: index.ts
static/: robots.txt  site.webmanifest
(+51 files in other folders)
