[package]
name = "lib-wasm"
version = "0.1.0"
description = "Rust library for WebAssembly @ oviedolab.org"
authors = ["Cody Nhan Pham <contact@codynhanpham.com>"]
repository = "https://github.com/Oviedo-Lab/oviedo-lab.github.io"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"